Created : Get and Set Clipboard Page

--- a/src/app/clipboard/clipboard.component.html
+++ b/src/app/clipboard/clipboard.component.html
@@ -1,4 +1,29 @@
 <app-intro [duration]="4" *ngIf="loaded"></app-intro>
 <div class="container" *ngIf="!loaded">
-  <h3>Hello World</h3>
+  <header>
+    <img
+      src="../../assets/cloud-clip_icon_inverse.png"
+      alt="Cloud-clipboard Icon"
+    />
+    <div class="row">
+      <h4>Cloud</h4>
+      <h4 class="black">Clipboard</h4>
+    </div>
+  </header>
+  <div class="card-wrap">
+    <div class="card">
+      <nav>
+        <a
+          routerLink="/"
+          routerLinkActive="active"
+          [routerLinkActiveOptions]="{ exact: true }"
+          >Set Clipboard</a
+        >
+        <a routerLink="/setClipboard" routerLinkActive="active"
+          >Get Clipboard</a
+        >
+      </nav>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
