--- a/src/app/get-clip/get-clip.component.html
+++ b/src/app/get-clip/get-clip.component.html
@@ -1,12 +1,13 @@
 <div class="container">
-  <div class="col">
-    <form action="">
-      <div class="row">
-        <input type="text" placeholder="type id here" />
-        <button>Get Clip</button>
-      </div>
-    </form>
-    <img src="../../assets/sample_qr.png" alt="" />
+  <form action="">
+    <div class="row">
+      <input type="text" placeholder="type id here" />
+      <button>Get Clip</button>
+    </div>
+    <textarea></textarea>
+  </form>
+  <div class="img-container">
+    <img class="qr" src="../../assets/sample_qr.png" alt="" />
   </div>
-  <div class="img-container"></div>
+  <p><i class="far fa-copyright"></i> {{ year }} | Cloud CLipboard Inc.</p>
 </div>
