--- a/src/app/set-clip/set-clip.component.html
+++ b/src/app/set-clip/set-clip.component.html
@@ -3,6 +3,7 @@
     <textarea></textarea>
     <button>Set Clip</button>
   </form>
-  <div class="img-container"></div>
-  <!-- <img src="../../assets/Saly-22.png" alt="" /> -->
+  <!-- <div class="img-container"></div> -->
+  <img src="../../assets/Saly-22.png" alt="" />
+  <p><i class="far fa-copyright"></i> {{ year }} | Cloud CLipboard Inc.</p>
 </div>
