--- a/src/app/clipboard/clipboard.component.scss
+++ b/src/app/clipboard/clipboard.component.scss
@@ -7,6 +7,7 @@
   header {
     display: flex;
     align-items: center;
+    justify-content: space-between;
     gap: 0.5em;
     padding: 1em;
     cursor: pointer;
@@ -55,6 +56,16 @@
       }
     }
   }
+}
+
+.mat-icon {
+  color: white;
+  width: unset;
+  height: unset;
+}
+
+.material-icons {
+  font-size: 2.5em;
 }
 
 @media (max-width: 768px) {
