--- a/src/app/get-clip/get-clip.component.html
+++ b/src/app/get-clip/get-clip.component.html
@@ -6,9 +6,6 @@
     </div>
     <textarea></textarea>
   </form>
-  <div class="img-container">
-    <img *ngIf="!data" class="qr" src="../../assets/Saly-14.png" alt="" />
-    <qrcode *ngIf="data" [qrdata]="data" [width]="320"></qrcode>
-  </div>
+  <img src="../../assets/Saly-14.png" alt="" />
   <p><i class="far fa-copyright"></i> {{ year }} | Cloud CLipboard Inc.</p>
 </div>
