--- a/src/app/cloud-scanner/cloud-scanner.component.html
+++ b/src/app/cloud-scanner/cloud-scanner.component.html
@@ -1,1 +1,10 @@
-<p>cloud-scanner works!</p>
+<div class="container">
+  <qr-scanner
+    [debug]="false"
+    [canvasWidth]="1080"
+    [canvasHeight]="720"
+    [stopAfterScan]="true"
+    [updateTime]="500"
+  >
+  </qr-scanner>
+</div>
