--- a/src/app/clipboard/clipboard.component.scss
+++ b/src/app/clipboard/clipboard.component.scss
@@ -100,3 +100,15 @@
     }
   }
 }
+
+@media (max-width: 400px) {
+  .container {
+    header {
+      .row {
+        h4 {
+          font-size: 1.43em;
+        }
+      }
+    }
+  }
+}
