--- a/src/app/get-clip/get-clip.component.scss
+++ b/src/app/get-clip/get-clip.component.scss
@@ -54,6 +54,18 @@
   }
 }
 
+.loader-wrap {
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em;
+}
+
 @media (max-width: 768px) {
   .container {
     display: flex;
